--- a/src/style.css
+++ b/src/style.css
@@ -29,33 +29,22 @@ body {
   font-weight: bold;
   font-size: 2.5rem;
 }
-.square_data {
-  width: 90%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  height: 100px;
-  margin-top: 50px;
-}
-.square_data div {
-  width: 100px;
-  height: 100px;
-  background-color: rgb(40, 37, 66);
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
+.return_data {
   color: white;
-  font-size: 1.1rem;
-  font-family: "Ysabeau SC", sans-serif;
-  padding: 10px;
-  font-weight: bold;
+  font-size: 1.3rem;
 }
-#map {
-  width: 90%;
-  height: 350px;
-  background-color: rgb(70, 49, 112);
-  border-radius: 50px;
+.return_data p {
+  text-align: left;
+  font-family: "Ysabeau SC", sans-serif;
+  margin-top: 20px;
+}
+.refresh_btn {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #181e27;
+  font-family: "Ysabeau SC", sans-serif;
+  border: 1px solid gray;
+  border-radius: 20px;
+  color: gray;
+  font-weight: bold;
 }
